fixed an issue with line breaks on Details page, books description.

--- a/frontend/src/pages/Detail/styles.css
+++ b/frontend/src/pages/Detail/styles.css
@@ -119,6 +119,7 @@
     line-height: 25px;
     letter-spacing: 0.2px;
     color: rgba(49, 49, 49, 0.6);
+    white-space: pre-wrap;
 }
 
 .detail .actions-menu {
